--- a/src/mobile/header/Header.module.css
+++ b/src/mobile/header/Header.module.css
@@ -3,7 +3,7 @@
 .logo {
     display: grid;
     place-items: center;
-    grid-template-columns: 1fr;
+    grid-template-columns: 1fr 1fr;
     width: 100%;
     height: 50px;
     background-color: #3f3f3f98;
@@ -12,7 +12,6 @@
 .logo a {
     text-decoration: none;
     font-family: "PT Sans Caption", sans-serif;
-    color: #aeaeae;
   }
 
 
