--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -126,6 +126,7 @@ Link {
   color: #c9c8c8;
   display: grid;
   place-items: center;
+  margin: 5px;
   grid-template-columns: 1fr;
 }
 
@@ -138,11 +139,10 @@ Link {
 }
 
 .but {
-  margin-top: 15px;
+  margin: 5px;
   display: grid;
   place-items: center;
   grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr;
 
   button {
     background-color: $bg-btn;
